Contrastes REVISAR MUCHO MUCHO

--- a/gastronomia.html
+++ b/gastronomia.html
@@ -36,7 +36,7 @@
       <!-- Menú de la aplicación-->
       <nav>
         <a href="index.html" title="Página de inicio">Inicio</a>
-        <a href="gastronomia.html" title="Gastronomía" class="active">Gastronomía</a
+        <a href="gastronomia.html" title="Gastronomía" class="activo">Gastronomía</a
         >
         <a href="rutas.html" title="Rutas">Rutas</a>
         <a href="meteorologia.html" title="Información de la meteorología"
