CSS comentada con contrastes y advertencias layout inicial basico con advertencias comentadas tambien

--- a/gastronomia.html
+++ b/gastronomia.html
@@ -22,10 +22,9 @@
     <!-- Icono -->
     <link rel="icon" href="multimedia/favicon.ico" />
     <!-- Estilos -->
-    <link rel="stylesheet" href="estilo/layout.css">
-    <link rel="stylesheet" href="estilo/estilos.css">
-
-</head>
+    <link rel="stylesheet" href="estilo/layout.css" />
+    <link rel="stylesheet" href="estilo/estilos.css" />
+  </head>
   <body>
     <header>
       <!-- Cabecera compartida por todos los html -->
@@ -36,7 +35,8 @@
       <!-- Menú de la aplicación-->
       <nav>
         <a href="index.html" title="Página de inicio">Inicio</a>
-        <a href="gastronomia.html" title="Gastronomía" class="activo">Gastronomía</a
+        <a href="gastronomia.html" title="Gastronomía" class="activo"
+          >Gastronomía</a
         >
         <a href="rutas.html" title="Rutas">Rutas</a>
         <a href="meteorologia.html" title="Información de la meteorología"
@@ -97,14 +97,6 @@
 
       <article>
         <h3>Preparación de las Papas Arrugadas</h3>
-        <ol>
-          <li>Lavar bien las papas pequeñas sin quitar la piel.</li>
-          <li>Cocer en agua con abundante sal gorda y una rodaja de limón.</li>
-          <li>
-            Escurrir y dejar al fuego moviendo el caldero para secarlas y
-            arrugarlas.
-          </li>
-        </ol>
 
         <picture>
           <!-- Moviles -->
@@ -125,6 +117,15 @@
 
           <img alt="Papas Arrugadas y Mojos" src="multimedia/papas.webp" />
         </picture>
+
+        <ol>
+          <li>Lavar bien las papas pequeñas sin quitar la piel.</li>
+          <li>Cocer en agua con abundante sal gorda y una rodaja de limón.</li>
+          <li>
+            Escurrir y dejar al fuego moviendo el caldero para secarlas y
+            arrugarlas.
+          </li>
+        </ol>
 
         <video controls>
           <source src="multimedia/papas_video.mp4" type="video/mp4" />
@@ -149,14 +150,14 @@
       </article>
 
       <aside>
-        <h3>Glosario Gastronómico</h3>
+        <h3>Glosario Gastronómico</h3> 
         <dl>
           <dt>Gofio</dt>
           <dd>
             Harina de cereales tostados, alimento base de los antiguos canarios.
           </dd>
           <dt>Queso de Flor</dt>
-          <dd>Queso artesanal cuajado con la flor del cardo (D.O.P. Guía).</dd>
+          <dd>Queso artesanal cuajado con la flor del cardo (D.O.P.).</dd>
           <dt>Bienmesabe</dt>
           <dd>Postre dulce hecho con almendras, miel, huevo y limón.</dd>
         </dl>
@@ -164,15 +165,9 @@
     </main>
     <footer>
       <p>&copy; 2026 - Proyecto de Software y Estándares para la Web</p>
-      <address>
-        <p>Autor: Eloy Rubio Suárez</p>
-        <p>
-          Contacto: <a href="mailto:UO298184@uniovi.es">UO298184@uniovi.es</a>
-        </p>
-      </address>
       <p>
         Grado en Ingeniería Informática del Software - Escuela de Ingeniería
-        Informática
+        Informática de Oviedo
       </p>
     </footer>
   </body>
