INDEX TERMINADO REVISAR CSS CSS CSS

--- a/ayuda.html
+++ b/ayuda.html
@@ -47,5 +47,45 @@
     <p>
       Estas en: <a href="index.html">Inicio</a>>> <strong>Ayuda</strong>
     </p>
+    <main>
+    <h2>Guía de Ayuda al Usuario</h2>
+    <p>Bienvenido a la plataforma turística de Las Palmas. Este documento le ayudará a navegar y utilizar todas las funciones disponibles en nuestro sitio web.</p>
+
+    <article>
+        <h3>Navegación General</h3>
+        <p>En la parte superior de cada página encontrará un menú de navegación con las siguientes opciones en este orden:</p>
+        <ul>
+            <li><a href="index.html" title="Ir a Inicio">Inicio</a>: Página principal con un carrusel de imágenes de la provincia y las últimas noticias. [cite: 381, 497, 499]</li>
+            <li><a href="gastronomia.html" title="Ir a Gastronomía">Gastronomía</a>: Información detallada sobre los platos típicos, recetas y recursos multimedia de nuestra cocina. [cite: 381, 398]</li>
+            <li><a href="rutas.html" title="Ir a Rutas">Rutas</a>: Listado de itinerarios turísticos con mapas interactivos y gráficos de altura. [cite: 381, 443, 444]</li>
+            <li><a href="meteorologia.html" title="Ir a Meteorología">Meteorología</a>: Información del tiempo actual y previsión para los próximos 7 días en la capital. [cite: 382, 501, 502]</li>
+            <li><a href="juego.html" title="Ir a Juego">Juego</a>: Un cuestionario de 10 preguntas para poner a prueba sus conocimientos sobre el sitio. [cite: 383, 503]</li>
+            <li><a href="reservas.php" title="Ir a Reservas">Reservas</a>: Sistema para registrarse y gestionar reservas de actividades turísticas. [cite: 384, 531]</li>
+            <li><a href="ayuda.html" title="Página actual de Ayuda">Ayuda</a>: Esta página de instrucciones. [cite: 384, 412]</li>
+        </ul>
+    </article>
+
+    <section>
+        <h3>Instrucciones de Funcionalidad</h3>
+        <dl>
+            <dt>¿Cómo ver las rutas?</dt>
+            <dd>Acceda a la sección "Rutas". Allí podrá cargar los archivos de ruta para ver el camino sobre un mapa y consultar los puntos de interés con sus fotos y vídeos.</dd>
+
+            <dt>¿Cómo jugar?</dt>
+            <dd>En la sección "Juego", responda a las 10 preguntas tipo test. Es obligatorio responder a todas para obtener su puntuación final al terminar.</dd>
+
+            <dt>¿Cómo hacer una reserva?</dt>
+            <dd>Primero debe registrarse a través del formulario en la sección "Reservas". Una vez identificado, podrá elegir una actividad, ver el presupuesto y confirmar su asistencia.</dd>
+        </dl>
+    </section>
+
+</main>
+ <footer>
+      <p>&copy; 2026 - Proyecto de Software y Estándares para la Web</p>
+      <p>
+        Grado en Ingeniería Informática del Software - Escuela de Ingeniería
+        Informática de Oviedo
+      </p>
+    </footer>
 </body>
 </html>
